--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,15 @@ dependencies {
 	implementation 'javax.servlet:jstl'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 
+	// spring data jdbc
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+
+	// mariadb connector
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
+
+	//마이바티스 라이브러리
+	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
+
 }
 
 tasks.named('test') {
